[gd_scene load_steps=11 format=2]

[ext_resource path="res://WhatsApp Image 2023-02-17 at 10.37.23 PM.jpeg" type="Texture" id=1]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://tela inicial 1/startScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 44
font_data = ExtResource( 2 )

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.227451 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 85.0
margin_right = 80.0
margin_bottom = 153.0

[node name="startBtn" type="Button" parent="controls"]
margin_right = 160.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../quitButton")
input_pass_on_modal_close_click = false
theme = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.988235, 0.984314, 0.996078, 1 )
custom_colors/font_color_focus = Color( 0.0431373, 0.0352941, 0.968627, 1 )
custom_colors/font_color = Color( 0.984314, 0.976471, 0.976471, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.0352941, 0.968627, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="settingsButton" type="Button" parent="controls"]
margin_top = 24.0
margin_right = 160.0
margin_bottom = 44.0
input_pass_on_modal_close_click = false
theme = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_focus = Color( 0.0313726, 0.980392, 0.0235294, 1 )
custom_colors/font_color = Color( 0.996078, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.980392, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="quitButton" type="Button" parent="controls"]
margin_top = 48.0
margin_right = 160.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../startBtn")
input_pass_on_modal_close_click = false
theme = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.996078, 0.992157, 0.992157, 1 )
custom_colors/font_color_focus = Color( 0.968627, 0.435294, 0.0352941, 1 )
custom_colors/font_color = Color( 0.992157, 0.980392, 0.980392, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.435294, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="bgd" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -152, -71 )
scale = Vector2( 1.04219, 0.905162 )
texture = ExtResource( 1 )
centered = false

[node name="nome" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -66.0
margin_right = 220.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 7 )
text = "Alaventura"
align = 1

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/settingsButton" to="." method="_on_settingsButton_pressed"]
[connection signal="pressed" from="controls/quitButton" to="." method="_on_quitButton_pressed"]
